--- a/week3/Homework/hackyourtemperature/package.json
+++ b/week3/Homework/hackyourtemperature/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "handlebars": "^4.5.3",
     "require": "^2.4.20"
   }
